[project]
name = "agentapproved"
version = "0.2.0"
description = "Runtime compliance evidence for AI agents — one-line SDK, tamper-proof audit trail, multi-framework attestation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Nathan Pemberton", email = "nathan@powerbee.co.uk"},
]
keywords = ["ai", "agents", "compliance", "eu-ai-act", "audit", "langchain", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
]
dependencies = [
    "langchain-core>=0.3.0",
    "uuid-utils>=0.9.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build",
]

[project.urls]
Homepage = "https://agentapproved.ai"
Repository = "https://github.com/agentapproved/agentapproved-python"
Documentation = "https://agentapproved.ai/docs"
Issues = "https://github.com/agentapproved/agentapproved-python/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentapproved*"]
exclude = ["tests*", "demo-*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
